--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
     "eslint": "^8.18.0",
-    "parcel": "^2.6.2",
+    "parcel": "^2.6.1",
     "prettier": "^2.7.1",
     "typescript": "^4.7.4"
   }
